Adicionando e configurando camadas de segurança

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.show-sql=true
 
 # desabilita o acesso remoto
 spring.h2.console.settings.web-allow-others=false
+
+mycash.clientId=mycash-web
+mycash.clientSecret=SENHAFORTE
