--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 			<version>2.1.0.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.4.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
